<resources>
    <string name="app_name">AgriculturalManagement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello World!</string>
    <string name="overview">Overview</string>
    <string name="calendar">Calendar</string>
    <string name="fields">Fields</string>
    <string name="new_field">New field</string>
    <string name="weather">Weather</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="about_us">About Us</string>
    <string name="crops">Crops</string>
    <string name="new_crop">New crop</string>
    <string name="crop">Crop</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="events_in_2_weeks">Events in the next two weeks</string>
    <string name="event">Event</string>
    <string name="datetime">Date &amp; time</string>
    <string name="new_event">New event</string>
    <string name="field">Field</string>
    <string name="events">Events</string>
</resources>
