<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewCalendarEventFragment">

    <EditText
        android:id="@+id/new_calendar_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/name"
        tools:text="crop name" />

    <EditText
        android:id="@+id/new_calendar_event_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:enabled="true"
        android:hint="@string/datetime"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/new_calendar_event_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:enabled="true"
        android:hint="@string/field"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/new_calendar_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        android:importantForAutofill="no"
        android:hint="@string/description"
        tools:text="crop description"/>
</LinearLayout>
