<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/overview_dest">
    <fragment
        android:id="@+id/overview_dest"
        android:name="com.example.agriculturalmanagement.OverviewFragment"
        android:label="@string/overview"
        tools:layout="@layout/fragment_overview">
    </fragment>

    <fragment
        android:id="@+id/field_list_dest"
        android:name="com.example.agriculturalmanagement.FieldListFragment"
        android:label="@string/fields"
        tools:layout="@layout/fragment_field_list">
        <action
            android:id="@+id/action_field_list_dest_to_new_field_dest"
            app:destination="@id/new_field_dest" />
        <action
            android:id="@+id/action_field_list_dest_to_field_data_dest"
            app:destination="@id/field_data_dest" />
    </fragment>

    <fragment
        android:id="@+id/calendar_dest"
        android:name="com.example.agriculturalmanagement.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar">
    </fragment>

    <fragment
        android:id="@+id/new_field_dest"
        android:name="com.example.agriculturalmanagement.NewFieldDataFragment"
        android:label="@string/new_field"
        tools:layout="@layout/fragment_new_field_data" />

    <fragment
        android:id="@+id/field_data_dest"
        android:name="com.example.agriculturalmanagement.FieldDataFragment"
        android:label="Field"
        tools:layout="@layout/fragment_field_data" >
        <argument
            android:name="fieldId"
            app:argType="integer" />
    </fragment>
</navigation>
